--- a/profiles.yml
+++ b/profiles.yml
@@ -13,11 +13,11 @@ online_store:
       dataset: dwh_online_store
       job_execution_timeout_seconds: 300
       job_retries: 1
-      keyfile: /home/abay/conf/ff-ngulik-de-08293b29731a.json
+      keyfile: /home/abay/conf/ff-ngulik-xxxxxxx.json
       location: US
       method: service-account
       priority: interactive
-      project: ff-ngulik-de
+      project: ff-ngulik-xx
       threads: 1
       type: bigquery
   target: dev
